--- a/Kustaway/src/main/res/values/strings.xml
+++ b/Kustaway/src/main/res/values/strings.xml
@@ -253,4 +253,6 @@
     <string name="toast_destroy_no_retweet_success">Success turn on retweets.</string>
     <string name="pref_title_talk_order_newest">The latest order of conversation</string>
     <string name="pref_description_talk_order_newest">Display the conversation from newest to oldest.</string>
+
+    <string name="transition_profile_icon">transition_profile_icon</string>
 </resources>
