--- a/Kustaway/src/main/res/values/strings.xml
+++ b/Kustaway/src/main/res/values/strings.xml
@@ -255,4 +255,5 @@
     <string name="pref_description_talk_order_newest">Display the conversation from newest to oldest.</string>
 
     <string name="transition_profile_icon" translatable="false">transition_profile_icon</string>
+    <string name="transition_tweet_image" translatable="false">transition_tweet_image</string>
 </resources>
